--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,9 +27,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 
-    
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 
-    <title>Urban Dragon Wear</title>
+    <title>Urban Dragon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
